-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.1
-
None
-
-
6a7221f05 (dev), 21003ab22 (6.6), 532c0a1c1 (6.5)
I cannot get the C++ QAudioDevice/QAudioSink audio output API working on WASM Qt 6.5.1. It seems there is no audio output device available, even when manually granting sound output permission.
Also, the Qt Example 'audiooutput' works Qt 6.5.0 but not on 6.5.1.
NB: I am currently testing on macOS with Chrome, Firefox, Safari. All have the same problem.
NB: This was found to be a problem on the multi-threaded WASM Qt.
| For Gerrit Dashboard: QTBUG-114061 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 481924,2 | wasm: fix multimedia devices discovery | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 482363,2 | wasm: fix multimedia devices discovery | 6.6 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
| 482364,2 | wasm: fix multimedia devices discovery | 6.5 | qt/qtmultimedia | Status: MERGED | +2 | 0 |