wasm: fix multimedia devices discovery

Previously, this assumed user would create a capture session.

Fixes: QTBUG-114061
Change-Id: I28aa683618edd3f5f409e52e2a491784f8f5c884
Reviewed-by: Morten Johan Sørvig <morten.sorvig@qt.io>
(cherry picked from commit 6a7221f050522e9dd3e0e11826940b50cde36436)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>